test/expected/explain_fudc_i.out
explain friend operator int()
             ^
14: error: friend user-defined conversion operator must use qualified name
